ProyectoCompiladores-main/target/generated-sources/antlr4/cmd/sintaxis/ProyectoCompiladoresFisica/PhysicsLangParser.java
// Generated from PhysicsLang.g4 by ANTLR 4.4
package cmd.sintaxis.ProyectoCompiladoresFisica;

	import java.util.Map;//para usarlos en members
	import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PhysicsLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MRU=1, FUNCION=2, VARIABLE=3, MOSTRAR=4, FOR=5, ENTERO_DECL=6, SUMA=7, 
		MENOS=8, MULTIPLICACION=9, DIVICION=10, POTENCIA=11, AND=12, OR=13, NOT=14, 
		GT=15, LT=16, GEQ=17, LEQ=18, EQ=19, NEQ=20, ASIGNAR=21, LLAVE_OPEN=22, 
		LLAVE_CLOSE=23, PAR_OPEN=24, PAR_CLOSE=25, FIN=26, ID=27, ENTERO=28, WS=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'mru'", "'funcion'", "'variable'", "'mostrar'", "'for'", 
		"'entero'", "'+'", "'-'", "'*'", "'/'", "'^'", "'&&'", "'||'", "'!'", 
		"'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", "'{'", "'}'", "'('", 
		"')'", "';'", "ID", "ENTERO", "WS"
	};
	public static final int
		RULE_funcion = 0, RULE_sentence = 1, RULE_variable_declativa = 2, RULE_variable_asignacion = 3, 
		RULE_mostrar = 4, RULE_exprecion = 5, RULE_jerarOPE = 6, RULE_termino = 7;
	public static final String[] ruleNames = {
		"funcion", "sentence", "variable_declativa", "variable_asignacion", "mostrar", 
		"exprecion", "jerarOPE", "termino"
	};

	@Override
	public String getGrammarFileName() { return "PhysicsLang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	//atributos 
		Map<String, Object> symbolTable = new HashMap<String, Object>();

	public PhysicsLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FuncionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PhysicsLangParser.ID, 0); }
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public TerminalNode FUNCION() { return getToken(PhysicsLangParser.FUNCION, 0); }
		public TerminalNode LLAVE_CLOSE() { return getToken(PhysicsLangParser.LLAVE_CLOSE, 0); }
		public TerminalNode LLAVE_OPEN() { return getToken(PhysicsLangParser.LLAVE_OPEN, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitFuncion(this);
		}
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16); match(FUNCION);
			setState(17); match(ID);
			setState(18); match(LLAVE_OPEN);
			setState(22);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VARIABLE) | (1L << MOSTRAR) | (1L << ENTERO_DECL) | (1L << ID))) != 0)) {
				{
				{
				setState(19); sentence();
				}
				}
				setState(24);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(25); match(LLAVE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Variable_asignacionContext variable_asignacion() {
			return getRuleContext(Variable_asignacionContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public Variable_declativaContext variable_declativa() {
			return getRuleContext(Variable_declativaContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitSentence(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(30);
			switch (_input.LA(1)) {
			case VARIABLE:
			case ENTERO_DECL:
				enterOuterAlt(_localctx, 1);
				{
				setState(27); variable_declativa();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(28); variable_asignacion();
				}
				break;
			case MOSTRAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(29); mostrar();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declativaContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(PhysicsLangParser.ID, 0); }
		public TerminalNode VARIABLE() { return getToken(PhysicsLangParser.VARIABLE, 0); }
		public TerminalNode ENTERO_DECL() { return getToken(PhysicsLangParser.ENTERO_DECL, 0); }
		public TerminalNode FIN() { return getToken(PhysicsLangParser.FIN, 0); }
		public Variable_declativaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declativa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterVariable_declativa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitVariable_declativa(this);
		}
	}

	public final Variable_declativaContext variable_declativa() throws RecognitionException {
		Variable_declativaContext _localctx = new Variable_declativaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variable_declativa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_la = _input.LA(1);
			if ( !(_la==VARIABLE || _la==ENTERO_DECL) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(33); ((Variable_declativaContext)_localctx).ID = match(ID);
			setState(34); match(FIN);
			symbolTable.put((((Variable_declativaContext)_localctx).ID!=null?((Variable_declativaContext)_localctx).ID.getText():null),0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_asignacionContext extends ParserRuleContext {
		public Token ID;
		public ExprecionContext exprecion;
		public TerminalNode ID() { return getToken(PhysicsLangParser.ID, 0); }
		public ExprecionContext exprecion() {
			return getRuleContext(ExprecionContext.class,0);
		}
		public TerminalNode ASIGNAR() { return getToken(PhysicsLangParser.ASIGNAR, 0); }
		public TerminalNode FIN() { return getToken(PhysicsLangParser.FIN, 0); }
		public Variable_asignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterVariable_asignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitVariable_asignacion(this);
		}
	}

	public final Variable_asignacionContext variable_asignacion() throws RecognitionException {
		Variable_asignacionContext _localctx = new Variable_asignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37); ((Variable_asignacionContext)_localctx).ID = match(ID);
			setState(38); match(ASIGNAR);
			setState(39); ((Variable_asignacionContext)_localctx).exprecion = exprecion();
			setState(40); match(FIN);
			symbolTable.put((((Variable_asignacionContext)_localctx).ID!=null?((Variable_asignacionContext)_localctx).ID.getText():null),((Variable_asignacionContext)_localctx).exprecion.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MostrarContext extends ParserRuleContext {
		public ExprecionContext exprecion;
		public ExprecionContext exprecion() {
			return getRuleContext(ExprecionContext.class,0);
		}
		public TerminalNode MOSTRAR() { return getToken(PhysicsLangParser.MOSTRAR, 0); }
		public TerminalNode FIN() { return getToken(PhysicsLangParser.FIN, 0); }
		public MostrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mostrar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterMostrar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitMostrar(this);
		}
	}

	public final MostrarContext mostrar() throws RecognitionException {
		MostrarContext _localctx = new MostrarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mostrar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); match(MOSTRAR);
			setState(44); ((MostrarContext)_localctx).exprecion = exprecion();
			setState(45); match(FIN);
			System.out.println(((MostrarContext)_localctx).exprecion.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprecionContext extends ParserRuleContext {
		public Object value;
		public JerarOPEContext t1;
		public JerarOPEContext t2;
		public TerminalNode SUMA(int i) {
			return getToken(PhysicsLangParser.SUMA, i);
		}
		public List<TerminalNode> MENOS() { return getTokens(PhysicsLangParser.MENOS); }
		public JerarOPEContext jerarOPE(int i) {
			return getRuleContext(JerarOPEContext.class,i);
		}
		public TerminalNode MENOS(int i) {
			return getToken(PhysicsLangParser.MENOS, i);
		}
		public List<TerminalNode> SUMA() { return getTokens(PhysicsLangParser.SUMA); }
		public List<JerarOPEContext> jerarOPE() {
			return getRuleContexts(JerarOPEContext.class);
		}
		public ExprecionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprecion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterExprecion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitExprecion(this);
		}
	}

	public final ExprecionContext exprecion() throws RecognitionException {
		ExprecionContext _localctx = new ExprecionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exprecion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); ((ExprecionContext)_localctx).t1 = jerarOPE();
			((ExprecionContext)_localctx).value = (int)((ExprecionContext)_localctx).t1.value;
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SUMA || _la==MENOS) {
				{
				setState(58);
				switch (_input.LA(1)) {
				case SUMA:
					{
					setState(50); match(SUMA);
					setState(51); ((ExprecionContext)_localctx).t2 = jerarOPE();
					((ExprecionContext)_localctx).value = (int)_localctx.value +(int)((ExprecionContext)_localctx).t2.value;
					}
					break;
				case MENOS:
					{
					setState(54); match(MENOS);
					setState(55); ((ExprecionContext)_localctx).t2 = jerarOPE();
					((ExprecionContext)_localctx).value = (int)_localctx.value -(int)((ExprecionContext)_localctx).t2.value;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JerarOPEContext extends ParserRuleContext {
		public Object value;
		public TerminoContext t1;
		public TerminoContext t2;
		public TerminalNode MULTIPLICACION(int i) {
			return getToken(PhysicsLangParser.MULTIPLICACION, i);
		}
		public List<TerminalNode> MULTIPLICACION() { return getTokens(PhysicsLangParser.MULTIPLICACION); }
		public List<TerminalNode> POTENCIA() { return getTokens(PhysicsLangParser.POTENCIA); }
		public List<TerminoContext> termino() {
			return getRuleContexts(TerminoContext.class);
		}
		public TerminalNode POTENCIA(int i) {
			return getToken(PhysicsLangParser.POTENCIA, i);
		}
		public List<TerminalNode> DIVICION() { return getTokens(PhysicsLangParser.DIVICION); }
		public TerminoContext termino(int i) {
			return getRuleContext(TerminoContext.class,i);
		}
		public TerminalNode DIVICION(int i) {
			return getToken(PhysicsLangParser.DIVICION, i);
		}
		public JerarOPEContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jerarOPE; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterJerarOPE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitJerarOPE(this);
		}
	}

	public final JerarOPEContext jerarOPE() throws RecognitionException {
		JerarOPEContext _localctx = new JerarOPEContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_jerarOPE);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); ((JerarOPEContext)_localctx).t1 = termino();
			((JerarOPEContext)_localctx).value = (int)((JerarOPEContext)_localctx).t1.value;
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MULTIPLICACION) | (1L << DIVICION) | (1L << POTENCIA))) != 0)) {
				{
				setState(77);
				switch (_input.LA(1)) {
				case MULTIPLICACION:
					{
					setState(65); match(MULTIPLICACION);
					setState(66); ((JerarOPEContext)_localctx).t2 = termino();
					((JerarOPEContext)_localctx).value = (int)_localctx.value *(int)((JerarOPEContext)_localctx).t2.value;
					}
					break;
				case DIVICION:
					{
					setState(69); match(DIVICION);
					setState(70); ((JerarOPEContext)_localctx).t2 = termino();
					((JerarOPEContext)_localctx).value = (int)_localctx.value /(int)((JerarOPEContext)_localctx).t2.value;
					}
					break;
				case POTENCIA:
					{
					setState(73); match(POTENCIA);
					setState(74); ((JerarOPEContext)_localctx).t2 = termino();
					((JerarOPEContext)_localctx).value = (int)Math.pow((int)_localctx.value, (int)((JerarOPEContext)_localctx).t2.value);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminoContext extends ParserRuleContext {
		public Object value;
		public Token ENTERO;
		public Token ID;
		public ExprecionContext exprecion;
		public TerminalNode ID() { return getToken(PhysicsLangParser.ID, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(PhysicsLangParser.PAR_CLOSE, 0); }
		public ExprecionContext exprecion() {
			return getRuleContext(ExprecionContext.class,0);
		}
		public TerminalNode PAR_OPEN() { return getToken(PhysicsLangParser.PAR_OPEN, 0); }
		public TerminalNode ENTERO() { return getToken(PhysicsLangParser.ENTERO, 0); }
		public TerminoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_termino; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).enterTermino(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhysicsLangListener ) ((PhysicsLangListener)listener).exitTermino(this);
		}
	}

	public final TerminoContext termino() throws RecognitionException {
		TerminoContext _localctx = new TerminoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_termino);
		try {
			setState(91);
			switch (_input.LA(1)) {
			case ENTERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(82); ((TerminoContext)_localctx).ENTERO = match(ENTERO);
				((TerminoContext)_localctx).value =  Integer.parseInt((((TerminoContext)_localctx).ENTERO!=null?((TerminoContext)_localctx).ENTERO.getText():null)); 
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(84); ((TerminoContext)_localctx).ID = match(ID);
				((TerminoContext)_localctx).value =  symbolTable.get((((TerminoContext)_localctx).ID!=null?((TerminoContext)_localctx).ID.getText():null));
				}
				break;
			case PAR_OPEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(86); match(PAR_OPEN);
				setState(87); ((TerminoContext)_localctx).exprecion = exprecion();
				((TerminoContext)_localctx).value =  ((TerminoContext)_localctx).exprecion.value;
				setState(89); match(PAR_CLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}